# minecraft-bot

./: .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile.server  README.md  docker-compose.yaml  pyproject.toml
src/: main.py  players.json
src/core/: settings.py
src/services/players_manager/: __init__.py  manager.py
src/services/rcon/: __init__.py  rcon.py
src/telegram_bot/handlers/: __init__.py  menu.py  start.py
src/telegram_bot/keyboards/: __init__.py  cancel.py  main.py  tp.py
