[tool.poetry]
package-mode = false

[tool.black]
line-length = 88

[tool.mypy]
python_version = 3.12
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
rcon = "^2.4.6"
pydantic-settings = "^2.5.2"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"
isort = "^5.13.2"

